--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,82 +1,79 @@
 <!DOCTYPE html>
-<html ng-app="todoApp">
+<html ng-app="app">
 <head>
     <title>Yourapp</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="frameworks/css/bootstrap.css" rel="stylesheet"/>
     <link href="frameworks/css/bootstrap-theme.css" rel="stylesheet"/>
     <script src="frameworks/js/angular.js"></script>
-    <script>
-        var model = {
-            user: "Adam",
-            items: [{action: "Buy Flowers", done: false},
-                {action: "Get Shoes", done: false},
-                {action: "Collect Tickets", done: true},
-                {action: "Call Joe", done: false}]
-        };
-        var todoApp = angular.module("todoApp", []);
+    <style type="text/css">
+        body {
+            color: purple;
+            background-color: #eeeeee
+        }
 
-        todoApp.controller("ToDoCtrl", function ($scope) {
-            $scope.todo = model;
+        .well{
+            background: #8c8c8c;
+        }
+
+        .btn {
+            width: 50px;
+            border-radius: 12px;
+        }
+    </style>
+    <script>
+        var app = angular.module("app", []);
+
+        app.controller("appCtrl", function ($scope) {
+            var val = "";
+            $scope.digit = function (item) {
+                val = val + item;
+                $scope.value = val;
+            }
         });
     </script>
 </head>
-<body ng-controller="ToDoCtrl">
-<div class="page-header">
-    <h1>
-        {{todo.user}}'s To Do List
-        <span class="label label-default">{{todo.items.length}}</span>
-    </h1>
-</div>
-<div class="panel">
-    <div class="input-group">
-        <input class="form-control"/>
-        <span class="input-group-btn">
- <button class="btn btn-default">Add</button>
- </span>
+<body ng-controller="appCtrl">
+
+<nav class="navbar navbar-inverse" role="navigation">
+    <div class="container-fluid">
+        <span class="navbar-brand">Calculator</span>
     </div>
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>Description</th>
-            <th>Done</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="item in todo.items">
-            <td>{{item.action}}</td>
-            <td><input type="checkbox" ng-model="item.done"/></td>
-            <td>{{item.done}}</td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-<div><input type="text" class="form-control"></div>
-<div>
-    <p>
-        <button type="button" class="btn btn-default btn-lg">7</button>
-        <button type="button" class="btn btn-default btn-lg">8</button>
-        <button type="button" class="btn btn-default btn-lg">9</button>
-        <button type="button" class="btn btn-default btn-lg">/</button>
-    </p>
-    <p>
-        <button type="button" class="btn btn-default btn-lg">4</button>
-        <button type="button" class="btn btn-default btn-lg">5</button>
-        <button type="button" class="btn btn-default btn-lg">6</button>
-        <button type="button" class="btn btn-default btn-lg">*</button>
-    </p>
-    <p>
-        <button type="button" class="btn btn-default btn-lg">1</button>
-        <button type="button" class="btn btn-default btn-lg">2</button>
-        <button type="button" class="btn btn-default btn-lg">3</button>
-        <button type="button" class="btn btn-default btn-lg">+</button>
-    </p>
-    <p>
-        <button type="button" class="btn btn-default btn-lg">0</button>
-        <button type="button" class="btn btn-default btn-lg">&nbsp;.</button>
-        <button type="button" class="btn btn-default btn-lg">=</button>
-        <button type="button" class="btn btn-default btn-lg">-</button>
-    <p>
+</nav>
+
+<div class="row">
+    <div class="col-md-2 col-md-offset-5">
+        <div class="well">
+            <input type="text" class="form-control text-right" value="{{value}}" ng-init="value=0">
+            <hr>
+            <div class="text-center">
+                <p>
+                    <button type="button" class="btn btn-default btn-lg" ng-click="digit(7)">7</button>
+                    <button type="button" class="btn btn-default btn-lg" ng-click="digit(8)">8</button>
+                    <button type="button" class="btn btn-default btn-lg" ng-click="digit(9)">9</button>
+                    <button type="button" class="btn btn-default btn-lg">/</button>
+                </p>
+                <p>
+                    <button type="button" class="btn btn-default btn-lg" ng-click="digit(4)">4</button>
+                    <button type="button" class="btn btn-default btn-lg" ng-click="digit(5)">5</button>
+                    <button type="button" class="btn btn-default btn-lg" ng-click="digit(6)">6</button>
+                    <button type="button" class="btn btn-default btn-lg">*</button>
+                </p>
+                <p>
+                    <button type="button" class="btn btn-default btn-lg" ng-click="digit(1)">1</button>
+                    <button type="button" class="btn btn-default btn-lg" ng-click="digit(2)">2</button>
+                    <button type="button" class="btn btn-default btn-lg" ng-click="digit(3)">3</button>
+                    <button type="button" class="btn btn-default btn-lg">+</button>
+                </p>
+                <p>
+                    <button type="button" class="btn btn-default btn-lg" ng-click="digit(0)">0</button>
+                    <button type="button" class="btn btn-default btn-lg" ng-click="digit('.')">.</button>
+                    <button type="button" class="btn btn-default btn-lg">=</button>
+                    <button type="button" class="btn btn-default btn-lg" ng-click="digit('-')">-</button>
+                <p>
+            </div>
+        </div>
+    </div>
 </div>
 
 </body>
