--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -183,7 +183,13 @@
 </section>
 
 <footer>
-    <p>Copyright 2009 Your name</p>
+    <div class="navbar-fixed-bottom row-fluid">
+        <div class="navbar-inner navbar-inverse">
+            <div class="container text-center">
+                <span class="text-footer">Copyright 2016 Artur Belousov</span>
+            </div>
+        </div>
+    </div>
 </footer>
 
 </body>
