--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,8 +28,8 @@
                 <hr style="width: 100%; color: black; height: 1px; background-color:black;"/>
                 <div class="text-center">
                     <p>
-                        <button type="button" class="btn btn-warning" ng-click="digit(9)">%</button>
-                        <button type="button" class="btn btn-warning" ng-click="clearChar()">sqrt</button>
+                        <button type="button" class="btn btn-warning" ng-click="pow()">x<sup>2</sup></button>
+                        <button type="button" class="btn btn-warning" ng-click="sqrt()">sqrt</button>
                         <button type="button" class="btn btn-warning" ng-click="clearlastchar()">
                             <span class="glyphicon glyphicon-arrow-left"></span>
                         </button>
