move css js fonts

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,11 +3,11 @@
 <head>
     <title>Calculator</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="frameworks/css/bootstrap.css" rel="stylesheet"/>
-    <link href="frameworks/css/bootstrap-theme.css" rel="stylesheet"/>
-    <link href="frameworks/css/calc_style.css" rel="stylesheet"/>
-    <script src="frameworks/js/angular.js"></script>
-    <script src="frameworks/js/main.js"></script>
+    <link href="css/bootstrap.css" rel="stylesheet"/>
+    <link href="css/bootstrap-theme.css" rel="stylesheet"/>
+    <link href="css/calc_style.css" rel="stylesheet"/>
+    <script src="js/angular.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body ng-controller="appCtrl">
 <header>
