--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,10 +3,12 @@
 <head>
     <title>Calculator</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="css/bootstrap.css" rel="stylesheet"/>
-    <link href="css/bootstrap-theme.css" rel="stylesheet"/>
+    <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
+    <link href="bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet"/>
+
+    <script src="bower_components/angular/angular.js"></script>
+
     <link href="css/calc_style.css" rel="stylesheet"/>
-    <script src="js/angular.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body ng-controller="appCtrl">
@@ -67,8 +69,8 @@
     <div class="row">
         <div class="container col-lg-6 col-lg-offset-3">
             <div class="panel panel-primary">
-                <div class="panel-heading">
-                    Panel Heading
+                <div class="panel-heading text-warning">
+                    <span class="text-center">Panel Heading</span>
                 </div>
                 <div class="panel-body">
                     <table class="table table-bordered">
